Spacing bug fix attempt

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -107,8 +107,7 @@ $peaYellow: #F0FB96;
             h1.title {
                 margin: 10px 0 30px;
             }
-            .hours-form,
-            .edit-form {
+            .hours-form {
                 display: flex;
                 justify-content: space-between;
                 align-items: flex-end;
@@ -117,7 +116,15 @@ $peaYellow: #F0FB96;
                     width: 19%;
                 }
             }
+        }
+        .container-edit {
+            max-width: 768px;
             .edit-form {
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-end;
+                width: 100%;
+                max-width: 768px;
                 .form-group {
                     width: 24%;
                 }
@@ -177,6 +184,7 @@ body {
         height: 30px;
         display: flex;
         align-items: center;
+        display: block;
         .bar-wrapper {
             margin: 0 auto;
             display: flex;
@@ -235,6 +243,21 @@ body {
     }
 }
 
+main {
+    position: relative;
+    min-height: 90%;
+    width: 100%;
+    overflow-x: hidden;
+    display: block;
+}
+
+.container {
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    padding: 0 5% 0;
+}
+
 .container-login {
     position: absolute;
     top: 50%;
@@ -252,7 +275,9 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
+    width: 100%;
     transform: translate(-50%, -50%);
+    padding: 0 5% 0;
     display: block;
     margin-bottom: 10px;
     z-index: 1;
@@ -260,13 +285,6 @@ body {
     .form-group {
         width: 100%;
     }
-}
-
-.container {
-    margin: 10px auto;
-    text-align: center;
-    width: 100%;
-    padding: 0 5% 0;
 }
 
 h1.title {
@@ -533,13 +551,6 @@ p.row-info {
             color: $blue;
         }
     }
-}
-
-main {
-    position: relative;
-    min-height: 90%;
-    width: 100%;
-    overflow-x: hidden;
 }
 
 .top {
